[package]
name = "asper"
version = "0.1.0"
authors = ["Michael Asper <asper@utexas.edu>"]

[dependencies]
rocket = "^0.3.12"
rocket_codegen = "^0.3.12"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.rocket_contrib]
rocket_contrib = "^0.3.12"
default-features = false
features = ["handlebars_templates"]